--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#007AFF</color>
     <color name="white">#FFFFFF</color>
 
+    <color name="secondBackground">#1D323E</color>
+
 
 </resources>
