--- a/app/src/main/res/layout/fragment_seasons.xml
+++ b/app/src/main/res/layout/fragment_seasons.xml
@@ -7,27 +7,60 @@
         android:orientation="vertical">
 
     <TextView
-            android:id="@+id/currentMonthTextView"
+            android:id="@+id/titleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_margin="15dp"
             android:layout_marginBottom="0dp"
             android:gravity="center"
-            android:text="Annual flowering calendar"
-            android:textColor="@color/white"
+            android:text="Flowering calendar"
+            android:textColor="@color/colorPrimary"
             android:textSize="25sp" />
 
     <FrameLayout
             android:id="@+id/calendarPlace"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/currentMonthTextView"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/spinnersPlace"
+            android:layout_below="@+id/titleTextView"
             android:gravity="center_horizontal"
             android:paddingStart="10dp"
             android:paddingEnd="10dp">
 
     </FrameLayout>
+
+    <LinearLayout
+            android:id="@+id/spinnersPlace"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="10dp">
+
+        <Spinner
+                android:id="@+id/monthSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@null"
+                android:paddingRight="3dp"
+                android:paddingLeft="3dp"
+                android:visibility="gone" />
+
+        <Spinner
+                android:id="@+id/allergenSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingRight="3dp"
+                android:paddingLeft="3dp"
+                android:background="@null" />
+    </LinearLayout>
 
 
 </RelativeLayout>
